--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ a {
 /* View Home Page */
 .town-fruit-header {
   width: 10%;
-  max-width: 60px;
+  max-width: 50px;
   margin-right: 0.25rem;
 }
 
@@ -202,12 +202,13 @@ a {
 }
 
 .collection-img {
-  height: 50px;
-  width: 50px;
+  width: 100%;
+  height: auto;
 }
 
-.collection-status {
+.collection-image-wrapper {
   width: 6%;
+  min-width: 45px;
 }
 
 /* Edit Town */
@@ -263,13 +264,13 @@ i:active {
 
 .progress {
   margin: 1rem;
-  width: 90%;
   border-radius: 12px;
   height: 30px;
   background-color: #d9d9d9;
   display: flex;
   align-items: center;
   padding: 0.2rem 0.25rem;
+  flex-grow: 1;
 }
 
 .progress-bar {
@@ -283,7 +284,7 @@ i:active {
 /* Collections */
 
 .slider-container {
-  padding: 2rem;
+  padding: 2rem 0;
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
@@ -390,7 +391,8 @@ i:active {
 }
 
 .fish-modal {
-  width: 400px;
+  width: 90%;
+  max-width: 400px;
 }
 
 .modal-title {
@@ -417,8 +419,9 @@ i:active {
 }
 
 .modal-hero-img {
-  max-width: 300px;
+  max-width: 85%;
   max-height: 200px;
+  padding: 0 1rem;
 }
 
 .not-acquired-overlay {
@@ -462,11 +465,12 @@ i:active {
 }
 
 .blue-sm-tag {
-  min-width: 70px;
+  min-width: 80px;
 }
 
 .blue-med-tag {
   width: 50%;
+  min-width: 110px;
   margin-left: 0.5rem;
 }
 
@@ -477,15 +481,18 @@ i:active {
 .month-card {
   background-color: #bebb62;
   flex-basis: 25%;
+  min-width: 45px;
   padding: 0.25rem;
+  border: 3px solid #bebb62;
   border-radius: 12px;
-  margin-bottom: 0.5rem;
   text-align: center;
 }
 
 .fish-shadow-card {
   position: relative;
   display: flex;
+  flex-basis: 25%;
+  min-width: 80px;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -514,7 +521,8 @@ i:active {
 }
 
 .fish-size-img {
-  width: 70px;
+  width: 100%;
+  max-width: 70px;
   border-radius: 8px;
 }
 
@@ -523,7 +531,7 @@ i:active {
   color: black;
   width: 27px;
   height: 27px;
-  left: 5px;
+  left: -1px;
   top: -5px;
   background-color: white;
   border: 2px solid #0092e3;
@@ -540,7 +548,15 @@ i:active {
 }
 
 .month-active {
-  outline: 3px solid #146025;
+  border: 3px solid #146025;
+  border-radius: 10px;
+}
+
+.months-column {
+  flex-basis: 25%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .acquired-btn {
@@ -757,6 +773,14 @@ i:active {
 
 .fb-20 {
   flex-basis: 20%;
+}
+
+.fb-25 {
+  flex-basis: 25%;
+}
+
+.fb-75 {
+  flex-basis: 75%;
 }
 
 .fb-80 {
